Allow syncing with a device without enough space

When using Rhythmbox to transcode on the fly music from FLAC to a lighter format
like OGG, the available size is checked against the FLAC files, which can
prevent an user to sync even if there's enough space for the compressed files.

https://bugzilla.gnome.org/show_bug.cgi?id=632266